welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:7: error: value rond is not a member of object Math
  resultat = Math.rond(somme/nums.length)
                  ^